# luau-java

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle.kts  gradle.properties  jextract-luau.sh  libLuau.Compiler.dylib  libLuau.VM.dylib  libjnitest.dylib  settings.gradle.kts
.github/workflows/: build-core.yaml  build-natives.yaml  build.yaml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: JExtractTask.kt  luau.java-binary.gradle.kts  luau.java-library.gradle.kts  luau.jextract.gradle.kts  maven.kt  platform.kt
example/: build.gradle.kts
example/src/main/java/net/hollowcube/luau/: Example.java  ForceLoadAll.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  build.gradle.kts
native/src/: net_hollowcube_luau_util_GlobalRef.cc  net_hollowcube_luau_util_GlobalRef.h
src/main/c/: net_hollowcube_luau_util_JNIRefTest.c  net_hollowcube_luau_util_JNIRefTest.h
src/main/java/: module-info.java
src/main/java/net/hollowcube/luau/: BuilinLibrary.java  ErrorHelper.java  LuaAlloc.java  LuaCallbacks.java  LuaCallbacksImpl.java  LuaCoStatus.java  LuaCoroutineStatus.java  LuaError.java  LuaFunc.java  LuaFuncImpl.java  LuaFuncRef.java  LuaGCOp.java  LuaGcOp.java  LuaState.java  LuaStateImpl.java  LuaStatus.java  LuaString.java  LuaType.java  Luau.java  package-info.java
src/main/java/net/hollowcube/luau/compiler/: CoverageLevel.java  DebugLevel.java  LuauCompileException.java  LuauCompiler.java  LuauCompilerImpl.java  OptimizationLevel.java  TypeInfoLevel.java  package-info.java
src/main/java/net/hollowcube/luau/require/: AliasCycleTracker.java  ConfigStatus.java  NavigationResult.java  Navigator.java  PathType.java  Require.java  RequireConfiguration.java  RequireImpl.java  RequireResolver.java  RuntimeNavigationContext.java
src/main/java/net/hollowcube/luau/util/: GlobalRef.java  JNIRefTest.java  NativeLibraryLoader.java  RefSet.java  package-info.java
src/test/java/net/hollowcube/luau/: LuaStateParam.java  TestHelpers.java  TestLuaError.java  TestLuaState.java  TestLuaStateInit.java  TestLuaStringAtoms.java  TestRequire.java  Testing.java
src/test/java/net/hollowcube/luau/compiler/: LuauCompilerTest.java  TestLuauCompiler.java
src/test/java/net/hollowcube/luau/example/: BlockType.java  Entity.java  HelloCustomAllocator.java  HelloWorld.java  ScriptContainer.java  TestClass.java  Vec3.java  World.java
src/test/java/net/hollowcube/luau/preempt/: TestLuaPreempt.java
src/test/java/net/hollowcube/luau/require/: TestAliasCycleTracker.java  TestRequire.java  package-info.java
